// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcAmountFilterInput :props should render the error message when "errorMessage" is set 1`] = `
<div
  class="ec-amount-filter-input__error-text"
  data-test="ec-amount-filter-input__error-text"
  id="ec-amount-filter-input-1"
>
  <span>
    A random error message
  </span>
   
  <!---->
</div>
`;

exports[`EcAmountFilterInput :props should render the error tooltip when "errorTooltipMessage" is set 1`] = `
<div
  class="ec-amount-filter-input__error-text"
  data-test="ec-amount-filter-input__error-text"
  id="ec-amount-filter-input-1"
>
  <span>
    A random error message
  </span>
   
  <svg
    class="ec-amount-filter-input__error-tooltip ec-icon ec-icon--error"
    data-ec-tooltip-mock-content="A random error tooltip message"
    data-test="ec-amount-filter-input__error-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      href="/img/simple-icons.svg#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcAmountFilterInput :props should render with a bottom note in a warning state when "isWarning" is set to true 1`] = `
<div
  class="ec-amount-filter-input__bottom-note ec-amount-filter-input__bottom-note--is-warning"
  data-test="ec-amount-filter-input__bottom-note"
>
  <span>
    Bottom note message
  </span>
   
  <!---->
</div>
`;

exports[`EcAmountFilterInput :props should render with a bottom note when is "bottomNote" set 1`] = `
<div
  class="ec-amount-filter-input__bottom-note"
  data-test="ec-amount-filter-input__bottom-note"
>
  <span>
    Bottom note message
  </span>
   
  <!---->
</div>
`;

exports[`EcAmountFilterInput :props should render with a label when the "label" is set 1`] = `
<span
  class="ec-amount-filter-input__label-text"
  data-test="ec-amount-filter-input__label-text"
>
  Amount filter input
</span>
`;

exports[`EcAmountFilterInput :props should render with a note when the "note" is set 1`] = `
<span
  class="ec-amount-filter-input__note"
  data-test="ec-amount-filter-input__note"
>
  A random note message
</span>
`;

exports[`EcAmountFilterInput :props should render with a placeholder when "amountPlaceholder" is set 1`] = `
<input
  class="ec-input-field__input ec-input-field__input--is-in-group-left"
  data-test="ec-amount-filter-input__amount ec-amount-input ec-input-field__input"
  id="ec-input-field-3"
  placeholder="Random test placeholder"
  type="text"
/>
`;

exports[`EcAmountFilterInput :props should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-amount-filter-input"
  data-test="ec-amount-filter-input"
>
  <!---->
   
  <div
    class="ec-amount-filter-input__inputs-group"
  >
    <div
      class="ec-dropdown-search ec-dropdown ec-amount-filter-input__comparison-symbol-selector"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom-end"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!---->
           
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon my-sensitive-content-test-class"
            data-test="ec-amount-filter-input__comparison-symbol-selector ec-dropdown__input ec-input-field__input"
            id="ec-amount-filter-input-1"
            placeholder=""
            readonly="readonly"
            type="text"
          />
           
          <div
            class="ec-input-field__icon-wrapper"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-input-field__icon ec-icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                href="/img/simple-icons.svg#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
           
          <!---->
        </div>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list my-sensitive-content-test-class"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="More than"
            >
              More than
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Equal to"
            >
              Equal to
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Less than"
            >
              Less than
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
     
    <div
      class="ec-input-field ec-amount-filter-input__amount"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left my-sensitive-content-test-class"
        data-test="ec-amount-filter-input__amount ec-amount-input ec-input-field__input"
        id="ec-input-field-3"
        type="text"
      />
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;

exports[`EcAmountFilterInput :props should render with a warning tooltip when the "warningTooltipMessage" is set 1`] = `
<div
  class="ec-amount-filter-input__bottom-note ec-amount-filter-input__bottom-note--is-warning"
  data-test="ec-amount-filter-input__bottom-note"
>
  <span>
    Bottom note message
  </span>
   
  <svg
    class="ec-amount-filter-input__warning-tooltip ec-icon ec-icon--warning"
    data-ec-tooltip-mock-content="Warning tooltip message"
    data-test="ec-amount-filter-input__warning-tooltip ec-mock ec-tooltip-mock"
    height="14"
    width="14"
  >
    <use
      href="/img/simple-icons.svg#ec-simple-error"
    />
  </svg>
</div>
`;

exports[`EcAmountFilterInput should render properly 1`] = `
<div
  class="ec-amount-filter-input"
  data-test="ec-amount-filter-input"
>
  <!---->
   
  <div
    class="ec-amount-filter-input__inputs-group"
  >
    <div
      class="ec-dropdown-search ec-dropdown ec-amount-filter-input__comparison-symbol-selector"
      data-test="ec-dropdown ec-dropdown-search"
    >
      <ec-stub
        class="ec-dropdown-search__trigger"
        data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
        offset="8"
        placement="bottom-end"
        popoverinnerclass="ec-dropdown-search__popover"
        popperoptions="[object Object]"
      >
        <div
          class="ec-input-field"
          data-test="ec-input-field"
        >
          <!---->
           
          <input
            class="ec-input-field__input ec-input-field__input--is-in-group-right ec-input-field__input--has-icon"
            data-test="ec-amount-filter-input__comparison-symbol-selector ec-dropdown__input ec-input-field__input"
            id="ec-amount-filter-input-1"
            placeholder=""
            readonly="readonly"
            type="text"
          />
           
          <div
            class="ec-input-field__icon-wrapper"
            data-test="ec-input-field__icon-wrapper"
          >
            <svg
              class="ec-input-field__icon ec-icon"
              data-test="ec-input-field__icon"
              height="24"
              width="24"
            >
              <use
                href="/img/simple-icons.svg#ec-simple-arrow-drop-down"
              />
            </svg>
          </div>
           
          <!---->
        </div>
          
        <div>
          <ul
            class="ec-dropdown-search__item-list"
            data-test="ec-dropdown-search__item-list"
          >
            <!---->
             
            <!---->
             
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
              title="More than"
            >
              More than
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
              title="Equal to"
            >
              Equal to
            </li>
            <li
              class="ec-dropdown-search__item"
              data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
              title="Less than"
            >
              Less than
            </li>
          </ul>
        </div>
      </ec-stub>
    </div>
     
    <div
      class="ec-input-field ec-amount-filter-input__amount"
      data-test="ec-input-field"
    >
      <!---->
       
      <input
        class="ec-input-field__input ec-input-field__input--is-in-group-left"
        data-test="ec-amount-filter-input__amount ec-amount-input ec-input-field__input"
        id="ec-input-field-3"
        type="text"
      />
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <!---->
</div>
`;
